k8s-hybris/k8s-minio/minio-client-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: minio-client
  name: minio-client
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: minio-client
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - ' sleep 8s; /usr/bin/mc config host add hybrisminio http://minio-server:9000  ;
          /usr/bin/mc mb hybrisminio/; /usr/bin/mc policy public hybrisminio/; exit
          0;'
        image: minio/mc
        name: minio-client
        resources: {}
      restartPolicy: Always
status: {}
