k8s-hybris/k8s-minio/minio-server-service.yaml
apiVersion: v1
kind: Service
metadata:
#  annotations:
#    traefik.backend: minio-server
#    traefik.docker.network: b2c-minio_hybris
#    traefik.enable: "true"
#    traefik.frontend.headers.SSLRedirect: "true"
#    traefik.frontend.headers.SSLTemporaryRedirect: "true"
#    traefik.frontend.redirect.entryPoint: https
#    traefik.frontend.rule: Host:minio.local
#    traefik.port: "9000"
#    traefik.protocol: http
  labels:
    app: minio
  name: minio-service
spec:
  type: ClusterIP
  ports:
  - name: minio-service
    port: 9000
    targetPort: 9000
    protocol: TCP
  selector:
    app: minio
