k8s-hybris/k8s-minio/minio-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
#    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
#    traefik.ingress.kubernetes.io/redirect-entry-point: https
#    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: minio-dashboard
spec:
  rules:
  - host: minio.local
    http:
      paths:
      - path: /
        backend:
          serviceName: minio-service
          servicePort: 9000
  tls:
  - secretName: minio-ssl
